--- a/index.html
+++ b/index.html
@@ -10,71 +10,73 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
-      background-color: #F3F4F6; /* Cinza claro mais vibrante */
+      background-color: #F3F4F6; /* Cinza claro vibrante */
     }
     header {
-      background-color: #1D4ED8; /* Azul vibrante */
+      background-color: #1E3A8A; /* Azul escuro conforme servicos.html */
       color: white;
       text-align: center;
-      padding: 2rem;
+      padding: 1.5rem; /* Padding reduzido */
+      max-width: 1200px; /* Largura limitada */
+      margin: 0 auto; /* Centralizado */
     }
     header img.logo {
-      max-height: 180px; /* Tamanho ajustado */
+      max-height: 120px; /* Tamanho ajustado para banner */
       max-width: 90%; /* Evita transbordo */
       width: auto;
-      margin: 0 auto 1rem; /* Espaçamento abaixo */
+      margin: 0 auto 0.5rem; /* Espaçamento reduzido */
       display: block;
       object-fit: contain; /* Enquadramento sem distorção */
     }
     header h1 {
-      font-size: 1.8rem; /* Equilibrado com logo */
+      font-size: 1.6rem; /* Menor para profissionalismo */
       margin: 0;
     }
     header p {
-      font-size: 1rem; /* Equilibrado com logo */
+      font-size: 0.9rem; /* Menor para equilíbrio */
       margin: 0.5rem 0;
     }
     nav {
       margin-top: 0.5rem;
     }
     nav a {
-      color: #93C5FD; /* Azul brilhante */
+      color: #BFDBFE; /* Azul claro suave */
       text-decoration: none;
-      font-size: 1rem;
-      margin: 0 1rem;
+      font-size: 0.9rem; /* Menor para navegação compacta */
+      margin: 0 0.75rem;
       transition: color 0.3s;
     }
     nav a:hover {
-      color: #DBEAFE;
+      color: #E5E7EB;
       text-decoration: underline;
     }
     .about {
-      background-color: #DBEAFE; /* Azul claro vibrante */
+      background-color: #E5E7EB; /* Cinza claro para contraste neutro */
       padding: 2rem 1rem;
       text-align: center;
     }
     .about h2 {
       font-size: 1.8rem;
       margin-bottom: 1rem;
-      color: #1D4ED8;
+      color: #1E3A8A; /* Azul escuro */
     }
     .about p {
       max-width: 800px;
       margin: 0 auto;
       font-size: 1rem;
-      color: #111827; /* Contraste maior */
+      color: #111827;
     }
     .portfolio {
       padding: 2rem 1rem;
       max-width: 1200px;
       margin: 0 auto;
-      background: linear-gradient(to bottom, #F3F4F6, #DBEAFE); /* Gradiente sutil */
+      background: linear-gradient(to bottom, #F3F4F6, #BFDBFE); /* Gradiente com azul escuro */
     }
     .portfolio h2 {
       font-size: 1.8rem;
       text-align: center;
       margin-bottom: 1.5rem;
-      color: #1D4ED8;
+      color: #1E3A8A; /* Azul escuro */
     }
     .portfolio-grid {
       display: grid;
@@ -94,7 +96,7 @@
     .portfolio-item img {
       width: 100%;
       height: 150px;
-      object-fit: contain;
+      object-fit: contain; /* Mantido para logos */
       background-color: #E5E7EB;
     }
     .portfolio-item-homepage {
@@ -110,32 +112,32 @@
     .portfolio-item h3 {
       font-size: 1.5rem;
       margin: 0 0 0.5rem;
-      color: #1D4ED8;
+      color: #1E3A8A; /* Azul escuro */
     }
     .portfolio-item p {
       color: #111827;
       margin: 0.5rem 0;
     }
     .portfolio-item a {
-      color: #3B82F6; /* Azul intenso */
+      color: #2563EB; /* Azul intenso */
       font-weight: bold;
       text-decoration: none;
       transition: color 0.3s;
     }
     .portfolio-item a:hover {
-      color: #2563EB;
+      color: #1E40AF;
       text-decoration: underline;
     }
     footer {
-      background-color: #1D4ED8;
+      background-color: #1E3A8A; /* Azul escuro */
       color: white;
       text-align: center;
-      padding: 1.5rem;
+      padding: 2rem; /* Ajustado para consistência */
       margin-top: 2rem;
     }
     footer h3 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 1.6rem; /* Ajustado para alinhamento com header */
+      margin-bottom: 1rem;
     }
     footer p {
       margin: 0.5rem 0;
@@ -143,7 +145,7 @@
     .contact-buttons {
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      gap: 4px;
       margin-top: 1rem;
     }
     .contact-buttons a {
@@ -160,7 +162,7 @@
       background-color: #25D366;
     }
     .whatsapp-button:hover {
-      background-color: #20B358;
+      background-color: #20B388;
     }
     .instagram-button {
       background: linear-gradient(45deg, #F09433, #E6683C, #DC2743, #CC2366, #BC1888);
@@ -181,17 +183,18 @@
     }
     @media (max-width: 600px) {
       header img.logo {
-        max-height: 120px; /* Tamanho ajustado */
+        max-height: 80px; /* Tamanho ajustado para banner */
       }
       header h1 {
-        font-size: 1.4rem;
+        font-size: 1.2rem; /* Menor */
       }
       header p {
-        font-size: 0.9rem;
+        font-size: 0.8rem; /* Menor */
       }
       nav a {
         display: block;
         margin: 0.5rem 0;
+        font-size: 0.8rem; /* Navegação compacta */
       }
       .portfolio-grid {
         grid-template-columns: 1fr;
@@ -204,7 +207,8 @@
 </head>
 <body>
   <header>
-    <img src="logoo2.png" alt="Devloft Tecnologia LTDA Logo" class="logo">
+    <img src="logoo2.png" alt="Devloft Tecnologia LTDA Banner" class="logo">
+    <h1>Devloft Tecnologia LTDA</h1>
     <p>Soluções digitais inovadoras com preços justos</p>
     <nav>
       <a href="index.html">Portfólio</a>
@@ -254,53 +258,4 @@
         <div class="portfolio-item-content">
           <h3>Mundo dos Esmaltes</h3>
           <p><strong>Categoria:</strong> Loja de Produtos de Beleza</p>
-          <p>Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design vibrante.</p>
-          <a href="https://mundodosesmaltes.wuaze.com" target="_blank">Visitar Site</a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=Hype+Car" alt="Hype Car Logo">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com carro em oficina, lista de serviços como troca de óleo e alinhamento, formulário de agendamento, e galeria de reparos realizados.
-        </div>
-        <div class="portfolio-item-content">
-          <h3>Hype Car Centro Automotivo</h3>
-          <p><strong>Categoria:</strong> Loja de Mecânica</p>
-          <p>Site para serviços automotivos, oferecendo manutenção e reparos com agendamento online. Design funcional que reflete a confiabilidade do serviço.</p>
-          <a href="http://www.hypecarcentroautomotivo.wuaze.com" target="_blank">Visitar Site</a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=MP+Cookies" alt="MP Cookies Logo">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com cookies recém-assados, vitrine de sabores como chocolate e baunilha, opções de personalização, e galeria de embalagens.
-        </div>
-        <div class="portfolio-item-content">
-          <h3>MP Cookies</h3>
-          <p><strong>Categoria:</strong> Loja de Alimentos</p>
-          <p>Loja online de cookies artesanais, com sabores únicos e personalizáveis. O site destaca a qualidade dos produtos com um design apetitoso e fácil de usar.</p>
-          <a href="https://mpcookies.wuaze.com" target="_blank">Visitar Site</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <h3>Entre em Contato</h3>
-    <p>Email: contato@devloft.com.br</p>
-    <p>Telefone: (11) 1234-5678</p>
-    <div class="contact-buttons">
-      <a href="https://wa.me/5511999999999" target="_blank" class="whatsapp-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon"> WhatsApp
-      </a>
-      <a href="https://www.instagram.com/devlofttech" target="_blank" class="instagram-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon"> Instagram
-      </a>
-      <a href="mailto:contato@devloft.com.br" class="gmail-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail Icon"> Gmail
-      </a>
-    </div>
-    <p>© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
-  </footer>
-</body>
-</html>
+          <p>Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design
