--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       text-decoration: underline;
     }
     .about {
-      background-color: #E5E7EB; /* Cinza claro para contraste neutro */
+      background-color: #E5E7EB; /* Cinza claro neutro */
       padding: 2rem 1rem;
       text-align: center;
     }
@@ -132,12 +132,12 @@
       background-color: #1E3A8A; /* Azul escuro */
       color: white;
       text-align: center;
-      padding: 2rem; /* Ajustado para consistência */
+      padding: 1.5rem;
       margin-top: 2rem;
     }
     footer h3 {
-      font-size: 1.6rem; /* Ajustado para alinhamento com header */
-      margin-bottom: 1rem;
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
     }
     footer p {
       margin: 0.5rem 0;
@@ -145,7 +145,7 @@
     .contact-buttons {
       display: flex;
       justify-content: center;
-      gap: 4px;
+      gap: 1rem;
       margin-top: 1rem;
     }
     .contact-buttons a {
@@ -162,7 +162,7 @@
       background-color: #25D366;
     }
     .whatsapp-button:hover {
-      background-color: #20B388;
+      background-color: #20B358;
     }
     .instagram-button {
       background: linear-gradient(45deg, #F09433, #E6683C, #DC2743, #CC2366, #BC1888);
@@ -258,4 +258,53 @@
         <div class="portfolio-item-content">
           <h3>Mundo dos Esmaltes</h3>
           <p><strong>Categoria:</strong> Loja de Produtos de Beleza</p>
-          <p>Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design
+          <p>Especializada em esmaltes e produtos de beleza, esta loja oferece uma vasta gama de itens para cuidados pessoais, com navegação simples e design vibrante.</p>
+          <a href="https://mundodosesmaltes.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=Hype+Car" alt="Hype Car Logo">
+        <div class="portfolio-item-homepage">
+          <strong>Página Inicial:</strong> Banner com carro em oficina, lista de serviços como troca de óleo e alinhamento, formulário de agendamento, e galeria de reparos realizados.
+        </div>
+        <div class="portfolio-item-content">
+          <h3>Hype Car Centro Automotivo</h3>
+          <p><strong>Categoria:</strong> Loja de Mecânica</p>
+          <p>Site para serviços automotivos, oferecendo manutenção e reparos com agendamento online. Design funcional que reflete a confiabilidade do serviço.</p>
+          <a href="http://www.hypecarcentroautomotivo.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://via.placeholder.com/300x150.png?text=MP+Cookies" alt="MP Cookies Logo">
+        <div class="portfolio-item-homepage">
+          <strong>Página Inicial:</strong> Banner com cookies recém-assados, vitrine de sabores como chocolate e baunilha, opções de personalização, e galeria de embalagens.
+        </div>
+        <div class="portfolio-item-content">
+          <h3>MP Cookies</h3>
+          <p><strong>Categoria:</strong> Loja de Alimentos</p>
+          <p>Loja online de cookies artesanais, com sabores únicos e personalizáveis. O site destaca a qualidade dos produtos com um design apetitoso e fácil de usar.</p>
+          <a href="https://mpcookies.wuaze.com" target="_blank">Visitar Site</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <h3>Entre em Contato</h3>
+    <p>Email: contato@devloft.com.br</p>
+    <p>Telefone: (11) 1234-5678</p>
+    <div class="contact-buttons">
+      <a href="https://wa.me/5511999999999" target="_blank" class="whatsapp-button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon"> WhatsApp
+      </a>
+      <a href="https://www.instagram.com/devlofttech" target="_blank" class="instagram-button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon"> Instagram
+      </a>
+      <a href="mailto:contato@devloft.com.br" class="gmail-button">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail Icon"> Gmail
+      </a>
+    </div>
+    <p>© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
