--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Devloft Tecnologia LTDA - Portfólio</title>
+  <title>Devloft Tecnologia</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,36 +13,36 @@
       background-color: #F3F4F6; /* Cinza claro vibrante */
     }
     header {
-      background-color: #1E3A8A; /* Azul escuro conforme servicos.html */
+      background-color: #1E3A8A; /* Azul escuro */
       color: white;
       text-align: center;
-      padding: 1.5rem; /* Padding reduzido */
-      max-width: 1200px; /* Largura limitada */
-      margin: 0 auto; /* Centralizado */
+      padding: 1.5rem;
+      max-width: 1200px;
+      margin: 0 auto;
     }
     header img.logo {
-      max-height: 120px; /* Tamanho ajustado para banner */
-      max-width: 90%; /* Evita transbordo */
+      max-height: 120px;
+      max-width: 90%;
       width: auto;
-      margin: 0 auto 0.5rem; /* Espaçamento reduzido */
+      margin: 0 auto 0.5rem;
       display: block;
-      object-fit: contain; /* Enquadramento sem distorção */
+      object-fit: contain;
     }
     header h1 {
-      font-size: 1.6rem; /* Menor para profissionalismo */
+      font-size: 1.6rem;
       margin: 0;
     }
     header p {
-      font-size: 0.9rem; /* Menor para equilíbrio */
+      font-size: 0.9rem;
       margin: 0.5rem 0;
     }
     nav {
       margin-top: 0.5rem;
     }
     nav a {
-      color: #BFDBFE; /* Azul claro suave */
+      color: #BFDBFE;
       text-decoration: none;
-      font-size: 0.9rem; /* Menor para navegação compacta */
+      font-size: 0.9rem;
       margin: 0 0.75rem;
       transition: color 0.3s;
     }
@@ -51,14 +51,14 @@
       text-decoration: underline;
     }
     .about {
-      background-color: #E5E7EB; /* Cinza claro neutro */
+      background-color: #E5E7EB;
       padding: 2rem 1rem;
       text-align: center;
     }
     .about h2 {
       font-size: 1.8rem;
       margin-bottom: 1rem;
-      color: #1E3A8A; /* Azul escuro */
+      color: #1E3A8A;
     }
     .about p {
       max-width: 800px;
@@ -70,13 +70,13 @@
       padding: 2rem 1rem;
       max-width: 1200px;
       margin: 0 auto;
-      background: linear-gradient(to bottom, #F3F4F6, #BFDBFE); /* Gradiente com azul escuro */
+      background: linear-gradient(to bottom, #F3F4F6, #BFDBFE);
     }
     .portfolio h2 {
       font-size: 1.8rem;
       text-align: center;
       margin-bottom: 1.5rem;
-      color: #1E3A8A; /* Azul escuro */
+      color: #1E3A8A;
     }
     .portfolio-grid {
       display: grid;
@@ -96,7 +96,7 @@
     .portfolio-item img {
       width: 100%;
       height: 150px;
-      object-fit: contain; /* Mantido para logos */
+      object-fit: contain;
       background-color: #E5E7EB;
     }
     .portfolio-item-homepage {
@@ -112,14 +112,14 @@
     .portfolio-item h3 {
       font-size: 1.5rem;
       margin: 0 0 0.5rem;
-      color: #1E3A8A; /* Azul escuro */
+      color: #1E3A8A;
     }
     .portfolio-item p {
       color: #111827;
       margin: 0.5rem 0;
     }
     .portfolio-item a {
-      color: #2563EB; /* Azul intenso */
+      color: #2563EB;
       font-weight: bold;
       text-decoration: none;
       transition: color 0.3s;
@@ -129,7 +129,7 @@
       text-decoration: underline;
     }
     footer {
-      background-color: #1E3A8A; /* Azul escuro */
+      background-color: #1E3A8A;
       color: white;
       text-align: center;
       padding: 1.5rem;
@@ -183,18 +183,18 @@
     }
     @media (max-width: 600px) {
       header img.logo {
-        max-height: 80px; /* Tamanho ajustado para banner */
+        max-height: 80px;
       }
       header h1 {
-        font-size: 1.2rem; /* Menor */
+        font-size: 1.2rem;
       }
       header p {
-        font-size: 0.8rem; /* Menor */
+        font-size: 0.8rem;
       }
       nav a {
         display: block;
         margin: 0.5rem 0;
-        font-size: 0.8rem; /* Navegação compacta */
+        font-size: 0.8rem;
       }
       .portfolio-grid {
         grid-template-columns: 1fr;
@@ -207,8 +207,9 @@
 </head>
 <body>
   <header>
-    <img src="logoo2.png" alt="Devloft Tecnologia LTDA Banner" class="logo">
-    <h1>Devloft Tecnologia LTDA</h1>
+    <img src="logoo2.jpg" alt="Devloft Tecnologia Banner" class="logo">
+    <h1>Devloft Tecnologia</h1>
+    <p>Soluções digitais inovadoras com preços justos</p>
     <nav>
       <a href="index.html">Portfólio</a>
       <a href="servicos.html">Serviços</a>
@@ -218,7 +219,7 @@
   <section class="about">
     <h2>Nossa História</h2>
     <p>
-      Fundada em 2024, a <strong>Devloft Tecnologia LTDA</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
+      Fundada em 2024, a <strong>Devloft Tecnologia</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
     </p>
   </section>
 
@@ -226,7 +227,7 @@
     <h2>Nosso Portfólio</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=Mandrake+Grifes" alt="Mandrake Grifes Logo">
+        <img src="Banner.jpg" alt="Mandrake Grifes Banner">
         <div class="portfolio-item-homepage">
           <strong>Página Inicial:</strong> Banner com coleção sazonal de roupas modernas, vitrine com camisetas e acessórios, seções de novidades e mais vendidos, e navegação para categorias como Masculino e Feminino.
         </div>
@@ -238,7 +239,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=No+Hype+CG" alt="No Hype CG Logo">
+        <img src="Logo (1).png" alt="No Hype CG Logo">
         <div class="portfolio-item-homepage">
           <strong>Página Inicial:</strong> Banner com modelo em cenário urbano vestindo roupas streetwear, grid de produtos como moletons e bonés, seções de lançamentos e promoções, e integração com Instagram.
         </div>
@@ -250,7 +251,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=Mundo+dos+Esmaltes" alt="Mundo dos Esmaltes Logo">
+        <img src="banner (3).png" alt="Mundo dos Esmaltes Banner">
         <div class="portfolio-item-homepage">
           <strong>Página Inicial:</strong> Banner com unhas decoradas, vitrine de esmaltes e kits de beleza, galeria de nail art, e seções de dicas de cuidados com unhas.
         </div>
@@ -262,7 +263,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://via.placeholder.com/300x150.png?text=Hype+Car" alt="Hype Car Logo">
+        <img src="banner-hypecar.png" alt="Hype Car Banner">
         <div class="portfolio-item-homepage">
           <strong>Página Inicial:</strong> Banner com carro em oficina, lista de serviços como troca de óleo e alinhamento, formulário de agendamento, e galeria de reparos realizados.
         </div>
@@ -303,7 +304,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail Icon"> Gmail
       </a>
     </div>
-    <p>© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
+    <p>© 2025 Devloft Tecnologia. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
