--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
       <div class="portfolio-item">
         <img src="Banner.jpg" alt="Mandrake Grifes Banner">
         <div class="portfolio-item-homepage">
+          <strong>Página Inicial:</strong> Banner com coleção sazonal de roupas modernas, vitrine com camisetas e acessórios, seções de novidades e mais vendidos, e navegação para categorias como Masculino e Feminino.
+        </div>
         <div class="portfolio-item-content">
           <h3>Mandrake Grifes</h3>
           <p><strong>Categoria:</strong> Loja de Roupas</p>
