--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Devloft Tecnologia</title>
+  <title>Devloft Tecnologia LTDA - Portfólio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -99,13 +99,6 @@
       object-fit: contain;
       background-color: #E5E7EB;
     }
-    .portfolio-item-homepage {
-      padding: 1rem;
-      background-color: #F3F4F6;
-      font-size: 0.9rem;
-      color: #111827;
-      border-bottom: 1px solid #E5E7EB;
-    }
     .portfolio-item-content {
       padding: 1.5rem;
     }
@@ -158,6 +151,25 @@
       color: white;
       transition: background-color 0.3s;
     }
+    .history {
+      background-color: #f3f2ee; /* Cor de fundo bege suave */
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0,0.1);
+      margin: 20px auto;
+      max-width: 800px;
+      text-align: center;
+    }
+    .history h2 {
+      font-size: 2em;
+      color: #333;
+      margin-bottom: 10px;
+    }
+    .history p {
+      font-size: 1.1em;
+      color: #555;
+      line-height: 1.6;
+    }
     .whatsapp-button {
       background-color: #25D366;
     }
@@ -207,8 +219,8 @@
 </head>
 <body>
   <header>
-    <img src="logoo2.jpg" alt="Devloft Tecnologia Banner" class="logo">
-    <h1>Devloft Tecnologia</h1>
+    <img src="logoo2.png" alt="Devloft Tecnologia LTDA Banner" class="logo">
+    <h1>Devloft Tecnologia LTDA</h1>
     <p>Soluções digitais inovadoras com preços justos</p>
     <nav>
       <a href="index.html">Portfólio</a>
@@ -219,7 +231,7 @@
   <section class="about">
     <h2>Nossa História</h2>
     <p>
-      Fundada em 2024, a <strong>Devloft Tecnologia</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
+      Fundada em 2024, a <strong>Devloft Tecnologia LTDA</strong> nasceu com a missão de transformar ideias em realidades digitais. Com uma abordagem centrada no cliente, oferecemos serviços de programação de alta qualidade, desenvolvendo sites e aplicações sob medida. Nosso compromisso é entregar soluções inovadoras com preços justos e competitivos, garantindo que negócios de todos os tamanhos possam prosperar no mundo digital.
     </p>
   </section>
 
@@ -228,9 +240,6 @@
     <div class="portfolio-grid">
       <div class="portfolio-item">
         <img src="Banner.jpg" alt="Mandrake Grifes Banner">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com coleção sazonal de roupas modernas, vitrine com camisetas e acessórios, seções de novidades e mais vendidos, e navegação para categorias como Masculino e Feminino.
-        </div>
         <div class="portfolio-item-content">
           <h3>Mandrake Grifes</h3>
           <p><strong>Categoria:</strong> Loja de Roupas</p>
@@ -240,9 +249,6 @@
       </div>
       <div class="portfolio-item">
         <img src="Logo (1).png" alt="No Hype CG Logo">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com modelo em cenário urbano vestindo roupas streetwear, grid de produtos como moletons e bonés, seções de lançamentos e promoções, e integração com Instagram.
-        </div>
         <div class="portfolio-item-content">
           <h3>No Hype CG</h3>
           <p><strong>Categoria:</strong> Loja de Roupas</p>
@@ -252,9 +258,6 @@
       </div>
       <div class="portfolio-item">
         <img src="banner (3).png" alt="Mundo dos Esmaltes Banner">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com unhas decoradas, vitrine de esmaltes e kits de beleza, galeria de nail art, e seções de dicas de cuidados com unhas.
-        </div>
         <div class="portfolio-item-content">
           <h3>Mundo dos Esmaltes</h3>
           <p><strong>Categoria:</strong> Loja de Produtos de Beleza</p>
@@ -264,9 +267,6 @@
       </div>
       <div class="portfolio-item">
         <img src="banner-hypecar.png" alt="Hype Car Banner">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com carro em oficina, lista de serviços como troca de óleo e alinhamento, formulário de agendamento, e galeria de reparos realizados.
-        </div>
         <div class="portfolio-item-content">
           <h3>Hype Car Centro Automotivo</h3>
           <p><strong>Categoria:</strong> Loja de Mecânica</p>
@@ -276,9 +276,6 @@
       </div>
       <div class="portfolio-item">
         <img src="https://via.placeholder.com/300x150.png?text=MP+Cookies" alt="MP Cookies Logo">
-        <div class="portfolio-item-homepage">
-          <strong>Página Inicial:</strong> Banner com cookies recém-assados, vitrine de sabores como chocolate e baunilha, opções de personalização, e galeria de embalagens.
-        </div>
         <div class="portfolio-item-content">
           <h3>MP Cookies</h3>
           <p><strong>Categoria:</strong> Loja de Alimentos</p>
@@ -304,7 +301,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail Icon"> Gmail
       </a>
     </div>
-    <p>© 2025 Devloft Tecnologia. Todos os direitos reservados.</p>
+    <p>© 2025 Devloft Tecnologia LTDA. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
