--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="Cookies.png" alt="MP Cookies Logo">
+        <img src="cookiess.png" alt="MP Cookies Logo">
         <div class="portfolio-item-content">
           <h3>MP Cookies</h3>
           <p><strong>Categoria:</strong> Loja de Alimentos</p>
